# python-package-scanner

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
scanner/: cli.py  graph.py  osv.py  report.py
scripts/: pr-comment.sh
tests/: test_cli.py  test_graph.py  test_osv.py  test_report.py
tests/fixtures/: requirements.txt
