[project]
name = "python-package-scanner"
version = "0.1.0"
description = "Scan Python dependencies for vulnerabilities with dependency chain tracing"
requires-python = ">=3.11"
license = "Apache-2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]
